--- a/environment.yaml
+++ b/environment.yaml
@@ -1,4 +1,3 @@
-name: bart_installer
 channels:
   - nvidia/label/cuda-12.3.2
   - conda-forge
@@ -6,115 +5,115 @@ channels:
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - _sysroot_linux-64_curr_repodata_hack=3=haa98f57_10
-  - binutils_impl_linux-64=2.40=h5293946_0
-  - blas=1.0=openblas
-  - clapack=3.2.1=h14c3975_1001
-  - cuda=12.3.2=0
-  - cuda-cccl=12.3.101=0
-  - cuda-cccl_linux-64=12.6.77=ha770c72_0
-  - cuda-command-line-tools=12.3.2=0
-  - cuda-compiler=12.3.2=0
-  - cuda-crt-dev_linux-64=12.6.85=ha770c72_0
-  - cuda-cudart=12.3.101=0
-  - cuda-cudart-dev=12.3.101=0
-  - cuda-cudart-dev_linux-64=12.6.77=h3f2d84a_0
-  - cuda-cudart-static=12.3.101=0
-  - cuda-cudart-static_linux-64=12.6.77=h3f2d84a_0
-  - cuda-cudart_linux-64=12.6.77=h3f2d84a_0
-  - cuda-cuobjdump=12.3.101=0
-  - cuda-cupti=12.3.101=0
-  - cuda-cupti-static=12.3.101=0
-  - cuda-cuxxfilt=12.3.101=0
-  - cuda-demo-suite=12.3.101=0
-  - cuda-documentation=12.3.101=0
-  - cuda-driver-dev=12.3.101=0
-  - cuda-gdb=12.3.101=0
-  - cuda-libraries=12.3.2=0
-  - cuda-libraries-dev=12.3.2=0
-  - cuda-libraries-static=12.3.2=0
-  - cuda-nsight=12.3.101=0
-  - cuda-nsight-compute=12.3.2=0
-  - cuda-nvcc=12.3.107=0
-  - cuda-nvdisasm=12.3.101=0
-  - cuda-nvml-dev=12.3.101=0
-  - cuda-nvprof=12.3.101=0
-  - cuda-nvprune=12.3.101=0
-  - cuda-nvrtc=12.6.85=hbd13f7d_0
-  - cuda-nvrtc-dev=12.3.107=0
-  - cuda-nvrtc-static=12.3.107=0
-  - cuda-nvtx=12.3.101=0
-  - cuda-nvvp=12.3.101=0
-  - cuda-opencl=12.3.101=0
-  - cuda-opencl-dev=12.3.101=0
-  - cuda-profiler-api=12.3.101=0
-  - cuda-runtime=12.3.2=0
-  - cuda-sanitizer-api=12.3.101=0
-  - cuda-toolkit=12.3.2=0
-  - cuda-tools=12.3.2=0
-  - cuda-version=12.6=h7480c83_3
-  - cuda-visual-tools=12.3.2=0
-  - cudnn=9.1.1.17=cuda12_0
-  - fftw=3.3.9=h5eee18b_2
-  - gcc=12.4.0=h236703b_1
-  - gcc_impl_linux-64=12.4.0=hb2e57f8_1
-  - gds-tools=1.8.1.2=0
-  - gxx=12.4.0=h236703b_1
-  - gxx_impl_linux-64=12.4.0=h613a52c_1
-  - kernel-headers_linux-64=3.10.0=h57e8cba_10
-  - ld_impl_linux-64=2.40=h12ee557_0
-  - libblas=3.9.0=16_linux64_openblas
-  - libcblas=3.9.0=16_linux64_openblas
-  - libcublas=12.6.4.1=hbd13f7d_0
-  - libcublas-dev=12.6.4.1=h5888daf_0
-  - libcublas-static=12.6.4.1=h5888daf_0
-  - libcufft=11.0.12.1=0
-  - libcufft-dev=11.0.12.1=0
-  - libcufft-static=11.0.12.1=0
-  - libcufile=1.8.1.2=0
-  - libcufile-dev=1.8.1.2=0
-  - libcufile-static=1.8.1.2=0
-  - libcurand=10.3.4.107=0
-  - libcurand-dev=10.3.4.107=0
-  - libcurand-static=10.3.4.107=0
-  - libcusolver=11.5.4.101=0
-  - libcusolver-dev=11.5.4.101=0
-  - libcusolver-static=11.5.4.101=0
-  - libcusparse=12.2.0.103=0
-  - libcusparse-dev=12.2.0.103=0
-  - libcusparse-static=12.2.0.103=0
-  - libgcc=14.2.0=h77fa898_1
-  - libgcc-devel_linux-64=12.4.0=ha4f9413_101
-  - libgcc-ng=14.2.0=h69a702a_1
-  - libgfortran-ng=7.5.0=ha8ba4b0_17
-  - libgfortran4=7.5.0=ha8ba4b0_17
-  - libgfortran5=14.2.0=hd5240d6_1
-  - libgomp=14.2.0=h77fa898_1
-  - liblapack=3.9.0=16_linux64_openblas
-  - liblapacke=3.9.0=16_linux64_openblas
-  - libnpp=12.2.3.2=0
-  - libnpp-dev=12.2.3.2=0
-  - libnpp-static=12.2.3.2=0
-  - libnvjitlink=12.3.101=0
-  - libnvjitlink-dev=12.3.101=0
-  - libnvjpeg=12.3.0.81=0
-  - libnvjpeg-dev=12.3.0.81=0
-  - libnvjpeg-static=12.3.0.81=0
-  - libopenblas=0.3.21=h043d6bf_0
-  - libpng=1.6.39=h5eee18b_0
-  - libsanitizer=12.4.0=h46f95d5_1
-  - libstdcxx=14.2.0=hc0a3c3a_1
-  - libstdcxx-devel_linux-64=12.4.0=ha4f9413_101
-  - libstdcxx-ng=14.2.0=h4852527_1
-  - make=4.4.1=hb9d3cd8_2
-  - mpi=1.0=mpich
-  - mpich=4.2.2=h4a7f18d_101
-  - nomkl=3.0=0
-  - nsight-compute=2023.3.1.1=0
-  - openblas=0.3.21=h06a4308_0
-  - openblas-devel=0.3.21=h06a4308_0
-  - sysroot_linux-64=2.17=h57e8cba_10
-  - tzdata=2024b=hc8b5060_0
-  - zlib=1.2.13=h5eee18b_1
+  - _libgcc_mutex
+  - _openmp_mutex
+  - _sysroot_linux-64_curr_repodata_hack
+  - binutils_impl_linux-64
+  - blas
+  - clapack
+  - cuda
+  - cuda-cccl
+  - cuda-cccl_linux-64
+  - cuda-command-line-tools
+  - cuda-compiler
+  - cuda-crt-dev_linux-64
+  - cuda-cudart
+  - cuda-cudart-dev
+  - cuda-cudart-dev_linux-64
+  - cuda-cudart-static
+  - cuda-cudart-static_linux-64
+  - cuda-cudart_linux-64
+  - cuda-cuobjdump
+  - cuda-cupti
+  - cuda-cupti-static
+  - cuda-cuxxfilt
+  - cuda-demo-suite
+  - cuda-documentation
+  - cuda-driver-dev
+  - cuda-gdb
+  - cuda-libraries
+  - cuda-libraries-dev
+  - cuda-libraries-static
+  - cuda-nsight
+  - cuda-nsight-compute
+  - cuda-nvcc
+  - cuda-nvdisasm
+  - cuda-nvml-dev
+  - cuda-nvprof
+  - cuda-nvprune
+  - cuda-nvrtc
+  - cuda-nvrtc-dev
+  - cuda-nvrtc-static
+  - cuda-nvtx
+  - cuda-nvvp
+  - cuda-opencl
+  - cuda-opencl-dev
+  - cuda-profiler-api
+  - cuda-runtime
+  - cuda-sanitizer-api
+  - cuda-toolkit
+  - cuda-tools
+  - cuda-version
+  - cuda-visual-tools
+  - cudnn
+  - fftw
+  - gcc
+  - gcc_impl_linux-64
+  - gds-tools
+  - gxx
+  - gxx_impl_linux-64
+  - kernel-headers_linux-64
+  - ld_impl_linux-64
+  - libblas
+  - libcblas
+  - libcublas
+  - libcublas-dev
+  - libcublas-static
+  - libcufft
+  - libcufft-dev
+  - libcufft-static
+  - libcufile
+  - libcufile-dev
+  - libcufile-static
+  - libcurand
+  - libcurand-dev
+  - libcurand-static
+  - libcusolver
+  - libcusolver-dev
+  - libcusolver-static
+  - libcusparse
+  - libcusparse-dev
+  - libcusparse-static
+  - libgcc
+  - libgcc-devel_linux-64
+  - libgcc-ng
+  - libgfortran-ng
+  - libgfortran4
+  - libgfortran5
+  - libgomp
+  - liblapack
+  - liblapacke
+  - libnpp
+  - libnpp-dev
+  - libnpp-static
+  - libnvjitlink
+  - libnvjitlink-dev
+  - libnvjpeg
+  - libnvjpeg-dev
+  - libnvjpeg-static
+  - libopenblas
+  - libpng
+  - libsanitizer
+  - libstdcxx
+  - libstdcxx-devel_linux-64
+  - libstdcxx-ng
+  - make
+  - mpi
+  - mpich
+  - nomkl
+  - nsight-compute
+  - openblas
+  - openblas-devel
+  - sysroot_linux-64
+  - tzdata
+  - zlib
