Explicitly specifies that the internal compiler version of mpicc is gcc11
Fixed bug that mistakenly deleted conda.sh

--- a/environment.yaml
+++ b/environment.yaml
@@ -57,6 +57,7 @@ dependencies:
   - cuda-visual-tools
   - cudnn
   - fftw
+  # - openmpi
   - gcc=12.4.0
   - gcc_impl_linux-64=12.4.0
   - gds-tools
